[gd_scene load_steps=22 format=3 uid="uid://dc0hdlr7wq3lq"]

[ext_resource type="Script" uid="uid://bb13nkhmcojis" path="res://Scenes/Instances/InstanceRoot.gd" id="1_eeah7"]
[ext_resource type="PackedScene" uid="uid://dxv17gll2bx2l" path="res://Scenes/Instances/Hell/HellPuddle.tscn" id="2_qrryo"]
[ext_resource type="Texture2D" uid="uid://ctekysqm3q8wt" path="res://Art/Weapons/PlayingCard/Projectile_PlayingCard.png" id="3_eeah7"]
[ext_resource type="PackedScene" uid="uid://cytotq02c1x2a" path="res://Scenes/ProximityInteractables/proximity_shop.tscn" id="3_qq1a1"]
[ext_resource type="PackedScene" uid="uid://le5tbb8urp88" path="res://Scenes/ProximityInteractables/proximity_forge.tscn" id="3_u5ql4"]
[ext_resource type="PackedScene" uid="uid://davhmwwacx2xv" path="res://Scenes/Enemies/Bosses/test_boss.tscn" id="6_u5ql4"]
[ext_resource type="PackedScene" uid="uid://bhfq62xt07h37" path="res://Scenes/UI/ui.tscn" id="6_uv4m7"]
[ext_resource type="PackedScene" uid="uid://cu6nvv3r8tgkl" path="res://Scenes/UI/NewInventory.tscn" id="8_qq1a1"]
[ext_resource type="Script" uid="uid://q2s0hxfba110" path="res://Scripts/managers/GameManager.gd" id="9_u5ctk"]
[ext_resource type="Script" uid="uid://13p8bkyp17w" path="res://Scripts/managers/TestingManager.gd" id="10_cwiy3"]
[ext_resource type="Script" uid="uid://5tltnj2xg8ps" path="res://Scripts/managers/ShopManager.gd" id="12_e4e03"]
[ext_resource type="PackedScene" uid="uid://bcwklkqeim2sq" path="res://Scenes/UI/inventory.tscn" id="17_gf2b2"]
[ext_resource type="PackedScene" uid="uid://bwuwo8e451bxt" path="res://Scenes/UI/shop_inventory.tscn" id="18_85yrk"]
[ext_resource type="PackedScene" uid="uid://cwomrgi81thyq" path="res://Scenes/UI/weapon_crafting_inventory.tscn" id="20_41mr8"]
[ext_resource type="Script" uid="uid://xirmq1j15ex1" path="res://Scripts/managers/WindowManager.gd" id="27_fwf5d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_41mr8"]
radius = 652.96

[sub_resource type="CircleShape2D" id="CircleShape2D_wafdh"]
radius = 400.0

[sub_resource type="LabelSettings" id="LabelSettings_gf2b2"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_tpk5p"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_41mr8"]
font_size = 32

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_41mr8"]
width = 20
height = 20

[node name="GameInstance" type="Node2D" node_paths=PackedStringArray("camera", "game_man", "ui_man", "background_parent", "event_parent", "enemy_parent", "xp_parent", "character_parent", "weapon_parent", "spawn_area", "spawn_deadzone")]
process_mode = 3
script = ExtResource("1_eeah7")
camera = NodePath("Window640/Offset/CharacterParent/Camera2D")
game_man = NodePath("Window1920/Offset/GameManager")
ui_man = NodePath("Window1920/Offset/UIManager")
background_parent = NodePath("Window640/Offset/BackgroundParent")
event_parent = NodePath("Window640/Offset/EventParent")
enemy_parent = NodePath("Window640/Offset/EnemyParent")
xp_parent = NodePath("Window640/Offset/XP Parent")
character_parent = NodePath("Window640/Offset/CharacterParent")
weapon_parent = NodePath("Window640/Offset/WeaponParent")
spawn_area = NodePath("Window640/Offset/SpawnArea")
spawn_deadzone = NodePath("Window640/Offset/DeadzoneArea")

[node name="Window640" type="Window" parent="."]
auto_translate_mode = 1
disable_3d = true
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
physics_object_picking = true
oversampling_override = 1.0
size = Vector2i(1920, 1080)
wrap_controls = true
transient = true
unresizable = true
borderless = true
extend_to_title = true
mouse_passthrough = true
sharp_corners = true
content_scale_size = Vector2i(640, 360)
content_scale_mode = 2
content_scale_aspect = 1
content_scale_stretch = 1

[node name="Offset" type="Node2D" parent="Window640"]
process_mode = 1
texture_filter = 1
position = Vector2(320, 180)

[node name="BackgroundParent" type="Node2D" parent="Window640/Offset"]

[node name="EventParent" type="Node2D" parent="Window640/Offset"]

[node name="HellPuddle" parent="Window640/Offset/EventParent" instance=ExtResource("2_qrryo")]
position = Vector2(-78.77777, 24)

[node name="StaticBody2D" type="StaticBody2D" parent="Window640/Offset/EventParent"]
position = Vector2(-81.44444, -23)
collision_layer = 64
collision_mask = 2

[node name="ProximityForge" parent="Window640/Offset/EventParent/StaticBody2D" instance=ExtResource("3_u5ql4")]
position = Vector2(4.666677, 1.3333359)

[node name="ProximityShop" parent="Window640/Offset/EventParent/StaticBody2D" instance=ExtResource("3_qq1a1")]
position = Vector2(7.3333435, -50.333336)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Window640/Offset/EventParent/StaticBody2D"]
position = Vector2(-5.333326, 100.333336)
polygon = PackedVector2Array(20, 20, 0, 15, 0, -15, 20, -20)

[node name="Sprite2D" type="Sprite2D" parent="Window640/Offset/EventParent/StaticBody2D/CollisionPolygon2D"]
position = Vector2(10.444397, -2.670288e-05)
texture = ExtResource("3_eeah7")

[node name="ProximityForge2" parent="Window640/Offset/EventParent/StaticBody2D" instance=ExtResource("3_u5ql4")]
position = Vector2(-94.88887, -62.666676)

[node name="ProximityForge3" parent="Window640/Offset/EventParent/StaticBody2D" instance=ExtResource("3_u5ql4")]
position = Vector2(-81.88886, 7.333326)

[node name="ProximityForge4" parent="Window640/Offset/EventParent/StaticBody2D" instance=ExtResource("3_u5ql4")]
position = Vector2(87.44447, -61.666676)

[node name="EnemyParent" type="Node2D" parent="Window640/Offset"]

[node name="TestBoss" parent="Window640/Offset/EnemyParent" instance=ExtResource("6_u5ql4")]
loot_drop_title = "You got a Test  Weapon!"
loot_drop_id_handle = 2
loot_drop_id_attachment = 3
loot_drop_id_projectile = 4

[node name="XP Parent" type="Node2D" parent="Window640/Offset" groups=["xp_parent"]]

[node name="CharacterParent" type="Node2D" parent="Window640/Offset"]

[node name="Camera2D" type="Camera2D" parent="Window640/Offset/CharacterParent"]

[node name="WeaponParent" type="Node2D" parent="Window640/Offset"]

[node name="SpawnArea" type="CollisionShape2D" parent="Window640/Offset"]
visible = false
position = Vector2(-10.333374, -5)
shape = SubResource("CircleShape2D_41mr8")

[node name="DeadzoneArea" type="CollisionShape2D" parent="Window640/Offset"]
visible = false
position = Vector2(-0.33337402, -11)
shape = SubResource("CircleShape2D_wafdh")

[node name="Window1920" type="Window" parent="."]
disable_3d = true
transparent_bg = true
physics_object_picking = true
oversampling_override = 1.0
size = Vector2i(1920, 1080)
wrap_controls = true
transient = true
unresizable = true
borderless = true
extend_to_title = true
mouse_passthrough = true
sharp_corners = true
content_scale_size = Vector2i(1920, 1080)
content_scale_mode = 2
content_scale_aspect = 1

[node name="Offset" type="Node2D" parent="Window1920"]
process_mode = 1
position = Vector2(727, 365)

[node name="TestingManager" type="Node2D" parent="Window1920/Offset" node_paths=PackedStringArray("EnemyParent") groups=["weapon_manager"]]
script = ExtResource("10_cwiy3")
EnemyParent = NodePath("../../../Window640/Offset/EnemyParent")

[node name="GameManager" type="Node2D" parent="Window1920/Offset" node_paths=PackedStringArray("ui_man", "shop_man", "xp_parent", "enemy_parent", "weapon_parent") groups=["gamemanager"]]
process_mode = 3
script = ExtResource("9_u5ctk")
ui_man = NodePath("../UIManager")
shop_man = NodePath("../ShopManager")
xp_parent = NodePath("../../../Window640/Offset/XP Parent")
enemy_parent = NodePath("../../../Window640/Offset/EnemyParent")
weapon_parent = NodePath("../../../Window640/Offset/WeaponParent")

[node name="ShopManager" type="Node2D" parent="Window1920/Offset" groups=["shopmanager"]]
script = ExtResource("12_e4e03")

[node name="UIManager" parent="Window1920/Offset" node_paths=PackedStringArray("money_label", "xp_label", "level_label", "hp_label", "fps_label", "stopwatch_label", "enemies_killed_label", "bosses_killed_label", "you_win", "tab_menu_parent", "esc_menu_parent", "level_up_parent", "static_ui_parent", "misc_parent", "AOIman", "cheat_inventory") instance=ExtResource("6_uv4m7")]
z_index = 6
position = Vector2(0, 0)
money_label = NodePath("StaticHUDparent/SimpleHUD/Money Label/Money")
xp_label = NodePath("StaticHUDparent/SimpleHUD/XP Label/XP")
level_label = NodePath("StaticHUDparent/SimpleHUD/LVL Label/LVL")
hp_label = NodePath("StaticHUDparent/SimpleHUD/HP Label/HP")
fps_label = NodePath("StaticHUDparent/SimpleHUD/FPS Label/FPS")
stopwatch_label = NodePath("StaticHUDparent/SimpleHUD/Time Label/Time")
enemies_killed_label = NodePath("StaticHUDparent/SimpleHUD/EnemiesKilled Label/EnemiesKilled")
bosses_killed_label = NodePath("StaticHUDparent/SimpleHUD/BossesKilled Label/BossesKilled")
you_win = NodePath("StaticHUDparent/YouWin")
tab_menu_parent = NodePath("TabMenuParent")
esc_menu_parent = NodePath("EscMenuParent")
level_up_parent = NodePath("LevelUpParent")
static_ui_parent = NodePath("StaticHUDparent")
misc_parent = NodePath("MiscParent")
AOIman = NodePath("TabMenuParent/Control")
cheat_inventory = NodePath("TabMenuParent/Cheat Inventory")

[node name="MiscParent" type="Control" parent="Window1920/Offset/UIManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Window1920/Offset/UIManager/MiscParent"]
layout_mode = 0
offset_left = -718.0
offset_top = -352.0
offset_right = -608.0
offset_bottom = -318.0
text = "Change Resolution
Current: "

[node name="TabMenuParent" type="Control" parent="Window1920/Offset/UIManager"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" parent="Window1920/Offset/UIManager/TabMenuParent" instance=ExtResource("8_qq1a1")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -719.0
offset_top = -164.0
offset_right = -719.0
offset_bottom = -164.0
grow_horizontal = 1
grow_vertical = 1

[node name="Cheat Inventory" parent="Window1920/Offset/UIManager/TabMenuParent" instance=ExtResource("17_gf2b2")]
layout_mode = 1
anchors_preset = -1
anchor_left = 9.1
anchor_top = 17.0
anchor_right = 20.35
anchor_bottom = 32.7
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="ShopInventory" parent="Window1920/Offset/UIManager/TabMenuParent" instance=ExtResource("18_85yrk")]
layout_mode = 1
offset_left = -744.0
offset_top = 665.0
offset_right = -294.0
offset_bottom = 1265.0

[node name="weapon_crafting_inventory" parent="Window1920/Offset/UIManager/TabMenuParent" instance=ExtResource("20_41mr8")]
layout_mode = 1
offset_left = -287.0
offset_top = 668.0
offset_right = 13.0
offset_bottom = 968.0

[node name="EscMenuParent" type="Control" parent="Window1920/Offset/UIManager"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Window1920/Offset/UIManager/EscMenuParent"]
layout_mode = 0
offset_left = -87.0
offset_top = -23.0
offset_right = 513.0
offset_bottom = 377.0

[node name="Label" type="Label" parent="Window1920/Offset/UIManager/EscMenuParent/Panel"]
layout_mode = 0
offset_left = 194.0
offset_top = 91.0
offset_right = 386.0
offset_bottom = 142.0
text = "Esc Menu"
label_settings = SubResource("LabelSettings_gf2b2")

[node name="Button" type="Button" parent="Window1920/Offset/UIManager/EscMenuParent/Panel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_left = 191.0
offset_top = 220.0
offset_right = 427.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 32
text = "Return to Main Menu"

[node name="LevelUpParent" type="Control" parent="Window1920/Offset/UIManager"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StaticHUDparent" type="Control" parent="Window1920/Offset/UIManager"]
process_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SimpleHUD" type="Panel" parent="Window1920/Offset/UIManager/StaticHUDparent"]
layout_mode = 0
offset_left = -713.0
offset_top = 565.0
offset_right = 1177.0
offset_bottom = 704.0

[node name="LVL Label" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 23.0
offset_top = 15.0
offset_right = 203.0
offset_bottom = 41.0
text = "Current Level: "
label_settings = SubResource("LabelSettings_tpk5p")

[node name="LVL" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/LVL Label"]
layout_mode = 0
offset_left = 174.0
offset_top = 1.0
offset_right = 222.0
offset_bottom = 27.0
text = "-999"
label_settings = SubResource("LabelSettings_tpk5p")

[node name="XP Label" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 23.0
offset_top = 48.0
offset_right = 167.0
offset_bottom = 74.0
text = "Current XP: "
label_settings = SubResource("LabelSettings_tpk5p")

[node name="XP" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/XP Label"]
layout_mode = 0
offset_left = 139.0
offset_top = 1.0
offset_right = 187.0
offset_bottom = 27.0
text = "-999"
label_settings = SubResource("LabelSettings_tpk5p")

[node name="HP Label" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 301.0
offset_top = 14.0
offset_right = 493.0
offset_bottom = 40.0
text = "Current Health: "
label_settings = SubResource("LabelSettings_tpk5p")

[node name="HP" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/HP Label"]
layout_mode = 0
offset_left = 183.0
offset_top = 1.0
offset_right = 231.0
offset_bottom = 27.0
text = "-999"
label_settings = SubResource("LabelSettings_tpk5p")

[node name="Money Label" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 301.0
offset_top = 46.0
offset_right = 481.0
offset_bottom = 72.0
text = "Current Money: "
label_settings = SubResource("LabelSettings_tpk5p")

[node name="Money" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/Money Label"]
layout_mode = 0
offset_left = 183.0
offset_top = 1.0
offset_right = 231.0
offset_bottom = 27.0
text = "-999"
label_settings = SubResource("LabelSettings_tpk5p")

[node name="BossesKilled Label" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
layout_mode = 0
offset_left = 600.0
offset_top = 87.0
offset_right = 792.0
offset_bottom = 113.0
text = "Bosses Killed: "
label_settings = SubResource("LabelSettings_41mr8")

[node name="BossesKilled" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/BossesKilled Label"]
layout_mode = 0
offset_left = 170.0
offset_top = 1.0
offset_right = 210.0
offset_bottom = 32.0
label_settings = SubResource("LabelSettings_41mr8")

[node name="EnemiesKilled Label" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
layout_mode = 0
offset_left = 600.0
offset_top = 52.0
offset_right = 672.0
offset_bottom = 78.0
text = "Enemies Killed: "
label_settings = SubResource("LabelSettings_41mr8")

[node name="EnemiesKilled" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/EnemiesKilled Label"]
layout_mode = 0
offset_left = 184.0
offset_top = -5.0
offset_right = 224.0
offset_bottom = 26.0
label_settings = SubResource("LabelSettings_41mr8")

[node name="FPS Label" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
layout_mode = 0
offset_left = 872.0
offset_top = 14.0
offset_right = 965.0
offset_bottom = 59.0
text = "FPS: "
label_settings = SubResource("LabelSettings_41mr8")

[node name="FPS" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/FPS Label"]
layout_mode = 0
offset_left = 72.0
offset_top = -6.0
offset_right = 112.0
offset_bottom = 39.0
label_settings = SubResource("LabelSettings_41mr8")

[node name="Time Label" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
layout_mode = 0
offset_left = 597.0
offset_top = 16.0
offset_right = 669.0
offset_bottom = 42.0
text = "Time: "
label_settings = SubResource("LabelSettings_41mr8")

[node name="Time" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/Time Label"]
layout_mode = 0
offset_left = 65.0
offset_top = -3.0
offset_right = 105.0
offset_bottom = 28.0
label_settings = SubResource("LabelSettings_41mr8")

[node name="Button" type="Button" parent="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD"]
layout_mode = 0
offset_left = 1477.0
offset_top = 12.0
offset_right = 1874.0
offset_bottom = 126.0
theme_override_colors/icon_pressed_color = Color(0.08510152, 0.7499544, 0.67877626, 1)
toggle_mode = true
text = "Toggle Spawning"
icon = SubResource("NoiseTexture2D_41mr8")

[node name="YouWin" type="Label" parent="Window1920/Offset/UIManager/StaticHUDparent"]
visible = false
layout_mode = 0
offset_right = 346.0
offset_bottom = 242.0
theme_override_font_sizes/font_size = 128
text = "You Win!"

[node name="WindowManager" type="Node" parent="."]
script = ExtResource("27_fwf5d")

[connection signal="pressed" from="Window1920/Offset/UIManager/MiscParent/Button" to="WindowManager" method="_on_pressed"]
[connection signal="button_down" from="Window1920/Offset/UIManager/EscMenuParent/Panel/Button" to="." method="return_to_main_menu"]
[connection signal="toggled" from="Window1920/Offset/UIManager/StaticHUDparent/SimpleHUD/Button" to="." method="SpawningButtonPressed"]
